projects/Data/hasura/hasura-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    field.cattle.io/publicEndpoints: '[{"addresses":["146.190.14.75"],"port":443,"protocol":"HTTPS","serviceName":"hasura:hasura","ingressName":"hasura:hasura-ingress","hostname":"hasura.rurich.dev","path":"/","allNodes":false}]'
    objectset.rio.cattle.io/applied: H4sIAAAAAAAA/3SQvW7jMBCE32VryZYonX5YX3nFVWkCF0tqbTGhSIbcBAgMvntAB7CNIC6J4Xwzs2fAYJ4oJuMdSMAQ0v6jhQpejVtAwl8K1n9u5Bgq2IhxQUaQZ0DnPCMb71J5evVCmhPxLhq/08hsaWf83hTIkf703azaum17qnukqZ6Hpa/7I6LAUWhqB8gVWFRkLzgMASSsmN4jQvWQvmJaQYLuRzWJZhix6WYhsBuarj0qMZISQiy9RtUsOIuS4XCjK7pe7ucVKQXUN70YUiBdKkUK1mhMILsKElnS7GMRNmS9/vu9es4VMG3BItPl790FH6zNd5naO0bjKCaQz2cwG55u5faniGF9szW5k3EEP7ZBBcFH/nZeQf99ZJBTMzX5kA855/wVAAD//zZlOi0CAgAA
    objectset.rio.cattle.io/id: fe5439b1-114e-4ae8-96d4-4faa2a72ce16
  creationTimestamp: "2022-12-25T03:44:55Z"
  generation: 5
  labels:
    app: hasura
    objectset.rio.cattle.io/hash: c47b82067a03922a36031fb27eb222d4cab0da92
  managedFields:
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:field.cattle.io/publicEndpoints: {}
          f:objectset.rio.cattle.io/applied: {}
          f:objectset.rio.cattle.io/id: {}
        f:labels:
          .: {}
          f:app: {}
          f:objectset.rio.cattle.io/hash: {}
      f:spec:
        f:progressDeadlineSeconds: {}
        f:replicas: {}
        f:revisionHistoryLimit: {}
        f:selector: {}
        f:strategy:
          f:rollingUpdate:
            .: {}
            f:maxSurge: {}
            f:maxUnavailable: {}
          f:type: {}
        f:template:
          f:metadata:
            f:labels:
              .: {}
              f:app: {}
          f:spec:
            f:affinity: {}
            f:containers:
              k:{"name":"hasura"}:
                .: {}
                f:envFrom: {}
                f:image: {}
                f:imagePullPolicy: {}
                f:name: {}
                f:ports:
                  .: {}
                  k:{"containerPort":8080,"protocol":"TCP"}:
                    .: {}
                    f:containerPort: {}
                    f:name: {}
                    f:protocol: {}
                f:resources: {}
                f:terminationMessagePath: {}
                f:terminationMessagePolicy: {}
            f:dnsPolicy: {}
            f:restartPolicy: {}
            f:schedulerName: {}
            f:securityContext: {}
            f:terminationGracePeriodSeconds: {}
    manager: rancher
    operation: Update
    time: "2022-12-25T03:49:37Z"
  - apiVersion: apps/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:deployment.kubernetes.io/revision: {}
      f:status:
        f:availableReplicas: {}
        f:conditions:
          .: {}
          k:{"type":"Available"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
          k:{"type":"Progressing"}:
            .: {}
            f:lastTransitionTime: {}
            f:lastUpdateTime: {}
            f:message: {}
            f:reason: {}
            f:status: {}
            f:type: {}
        f:observedGeneration: {}
        f:readyReplicas: {}
        f:replicas: {}
        f:updatedReplicas: {}
    manager: kube-controller-manager
    operation: Update
    subresource: status
    time: "2022-12-25T05:11:12Z"
  name: hasura-deployment
  namespace: hasura
  resourceVersion: "114805"
  uid: cb41477a-d121-465c-8883-9913a8f02e86
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hasura
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hasura
    spec:
      affinity: {}
      containers:
      - envFrom:
        - secretRef:
            name: platform
            optional: false
        image: hasura/graphql-engine
        imagePullPolicy: Always
        name: hasura
        ports:
        - containerPort: 8080
          name: 8080tcp
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2022-12-25T03:44:55Z"
    lastUpdateTime: "2022-12-25T03:46:09Z"
    message: ReplicaSet "hasura-deployment-cb97b4ffc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2022-12-25T05:11:12Z"
    lastUpdateTime: "2022-12-25T05:11:12Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 5
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
